# openai-proxy

./: .env.example  Cargo.toml  Dockerfile  README.md  openai-proxy.service
deploy/env/: openai-proxy.env
deploy/nginx/: openai-proxy.conf
deploy/scripts/: install_openai_proxy.sh
deploy/systemd/: openai-proxy.service
scripts/: generate-local-cert.ps1  generate-local-cert.sh
src/: main.rs
